--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Project1</h1>
+    <button id="btn">PRESS MEEE</button>
     <script src="./main.js"></script>
 </body>
 </html>
