added kindle layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 <body>
     <h1>Project1</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit asperiores magni temporibus error fugiat deleniti, nam quibusdam accusantium quo soluta facere quam, accusamus corrupti rerum cum eius ex minima facilis?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit asperiores magni temporibus error fugiat deleniti, nam
+        quibusdam accusantium quo soluta facere quam, accusamus corrupti rerum cum eius ex minima facilis?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit asperiores magni temporibus error fugiat deleniti, nam
+        quibusdam accusantium quo soluta facere quam, accusamus corrupti rerum cum eius ex minima facilis?
+    </p>
     <button id="btn">PRESS MEEE</button>
     <script src="./main.js"></script>
 </body>
